fixed the issue that body was scrollable when menu was visible

--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -28,8 +28,9 @@ header {
       @include transition(0.3s);
       @include maxTablet {
         position: absolute;
-        top:0;
+        top:50px;
         left:0;
+        bottom: 0;
         padding-left:0;
         visibility: hidden;
         opacity: 0;
